# Chunky-V1

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: mypy.yml
docs/source/: autodoc-index.rst  chunk-spec.csv  chunky-spec.csv  chunky-spec.rst  conf.py  index.rst
src/relic/chunky/: __init__.py
src/relic/chunky/v1/: __init__.py  _serializer.py  core.py  definitions.py  serialization.py
src/relic/chunky/v3_1/: _serializer.py
tests/: test_chunky.py  test_regressions.py
